...
        return label
    }()

    private let subtitleLabel: UILabel = {
        let label = UILabel()
        label.translatesAutoresizingMaskIntoConstraints = false
        label.text = "Magic coffee on order..."
        label.textAlignment = .center
        label.font = .poppins(.regular, size: 14)
        label.textColor = UIColor(hex: "#9B9B9B")
        return label
    }()

...

    override func viewDidLoad() {
        super.viewDidLoad()
        view.backgroundColor = .white
        navigationItem.setHidesBackButton(true, animated: false)
        setupLayout()
        nextButton.accessibilityIdentifier = "splash_next_button"
        nextButton.addTarget(self, action: #selector(didTapNext), for: .touchUpInside)
    }

    private func setupLayout() {
        view.addSubview(cardView)
        cardView.addSubview(logoView)
...
